--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-minimizer-webpack-plugin": "^7.0.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.7.1",
     "mini-css-extract-plugin": "^2.9.2",
     "popper.js": "^1.16.1",
